Homepage z-index fix

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,7 @@
 .home-page {
 	.text-zone {
-		z-index: 2;
+		position: relative;
+		z-index: 10;
 		margin-top: 110px;
 		max-width: 350px !important;
 	}
