--- a/src/components/Home/Logo/Logo.scss
+++ b/src/components/Home/Logo/Logo.scss
@@ -12,6 +12,7 @@
 		height: auto;
 		bottom: 0;
 		transform: rotateZ(20deg) !important;
+		z-index: 0;
 	}
 	.solid-logo {
 		position: absolute;
