--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -38,7 +38,6 @@
 	// background-color: aliceblue;
 	opacity: 0;
 	margin: 0 0 0 110px;
-	z-index: 1;
 	transform-style: preserve-3d;
 	animation: fadeIn 1s forwards;
 	animation-delay: 1s;
