--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -140,6 +140,7 @@ ul {
 			width: 100%;
 			justify-content: center;
 			align-items: center;
+			margin: 0 10px;
 		}
 	}
 	ul {
